manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connector-demo
  labels:
    app.kubernetes.io/component: connector-demo
spec:
  selector:
    matchLabels:
      kind: frontend
  template:
    metadata:
      name: connector-demo
      labels:
        kind: frontend
        app.kubernetes.io/component: connector-demo
    spec:
      containers:
      - name: connector-demo
        imagePullPolicy: Always
        image: connector-demo
        resources:
          limits:
            memory: "8Gi"
            cpu: "1000m"
        readinessProbe:
          httpGet:
            path: /
            port: 4200
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 4200
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 4200
          hostPort: 4201
