manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connector-demo
  labels:
    app.kubernetes.io/component: connector-demo
spec:
  selector:
    app.kubernetes.io/name: connector-demo
  ports:
  - port: 4201
    targetPort: 4200
    protocol: TCP
    name: http
  type: ClusterIP
